# game-starters

./: README.md
cpp-box2d-platformer/: CMakeLists.txt  build-all.sh  build.sh  imgui.ini  run.sh  settings.ini
cpp-box2d-platformer/src/: action.cpp  camera.cpp  draw.cpp  game.cpp  input.cpp  main.cpp  part.cpp  settings.cpp  ui.cpp
cpp-box2d-platformer/src/benched/: entity.h  material.cpp  material.h
cpp-box2d-platformer/src/include/: action.h  camera.h  draw.h  game.h  input.h  part.h  settings.h  ui.h
cpp-diy-platformer/: README.md  makefile
cpp-diy-platformer/res/: crt.frag
cpp-diy-platformer/src/: ball.cpp  box.cpp  colorwheel.cpp  game.cpp  input.cpp  level.cpp  main.cpp  menu.cpp  music.cpp  option.cpp  player.cpp  title.cpp
cpp-diy-platformer/src/include/: ball.h  box.h  colorwheel.h  game.h  global.h  input.h  level.h  menu.h  music.h  option.h  player.h  title.h
lua-arcade-shooter/: camera.lua  loop.lua  main.lua  ui.lua  util.lua
lua-arcade-shooter/world/: active.lua  arrow.lua  bullet.lua  emitter.lua  item.lua  physics.lua  player.lua  ship.lua  timefield.lua  track.lua  wall.lua  world.lua
lua-ship-builder/: command.lua  main.lua
lua-ship-builder/modules/: audio.lua  entity.lua  move.lua  particle.lua  place.lua  sprite.lua  stars.lua  ui.lua  window.lua
lua-ship-builder/modules/entity/: block.lua  grid.lua
lua-ship-builder/modules/unused/: log.lua  net.lua  world.lua
lua-ship-builder/resources/: edit.xcf  stars.xcf
lua-ship-builder/utility/: io.lua  value.lua
python-opengl/: car.py  door.py  entity.py  main.py  mesh.py  player.py  train.py  util.py
python-opengl/models/big/: human_big.blend  human_big.blend1
python-opengl/models/female/: human_fem.blend  human_fem.blend1
python-opengl/models/heads/: heads.blend  heads.blend1
python-opengl/models/male/: human_man.blend  human_man.blend1
python-opengl/models/robot/: robot.blend  (+1 more)
unity-3d-platformer/Assets/: RandomGeneration.cs  Recoil.cs  Respawner.cs  RestPosition.cs  Shooter.cs
unity-3d-platformer/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+18 files in other folders)
